<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/infoLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFriendProfile"
        tools:visibility="invisible">

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/basicLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewFriendProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

    <androidx.constraintlayout.helper.widget.Layer
        android:id="@+id/layer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:constraint_referenced_ids="infoLayout,imageViewCallButton,textViewFriendPhone,imageViewDeleteFriend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFriendProfile"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageViewFriendProfile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/av9"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="@+id/basicLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textViewFriendUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center|center_horizontal"
        android:text="@string/username"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewFriendProfile"
        app:layout_constraintEnd_toStartOf="@+id/textViewFriendKmAway"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageViewFriendProfile"
        app:layout_constraintTop_toTopOf="@+id/imageViewFriendProfile" />

    <TextView
        android:id="@+id/textViewFriendLastUpdated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/lastUpdated"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewFriendKmAway"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewFriendKmAway" />

    <TextView
        android:id="@+id/textViewFriendKmAway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/KmAway"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewFriendUsername"
        app:layout_constraintEnd_toStartOf="@+id/textViewFriendLastUpdated"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewFriendUsername" />

    <ImageView
        android:id="@+id/imageViewCallButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/infoLayout"
        app:layout_constraintEnd_toEndOf="@+id/imageViewFriendProfile"
        app:layout_constraintStart_toStartOf="@+id/imageViewFriendProfile"
        app:layout_constraintTop_toTopOf="@+id/infoLayout"
        app:srcCompat="@drawable/phone" />

    <TextView
        android:id="@+id/textViewFriendPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center|center_horizontal"
        android:text="@string/_6980911668"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewCallButton"
        app:layout_constraintStart_toEndOf="@+id/imageViewCallButton"
        app:layout_constraintTop_toTopOf="@+id/imageViewCallButton" />

    <ImageView
        android:id="@+id/imageViewDeleteFriend"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewCallButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewCallButton"
        app:srcCompat="@drawable/removefriend" />

</androidx.constraintlayout.widget.ConstraintLayout>